# nft-marketplace

./: .env  .env.docker  Challenge API.postman_collection.json  Dockerfile  README.md  docker-compose.yml  init.sql  mypy.ini  pyproject.toml
nft_service/src/: config.py  context.py  exceptions.py  main.py  utils.py
nft_service/src/db/: constants.py  events.py
nft_service/src/db/repositories/: balance.py  base.py  nft.py  transaction.py  user.py
nft_service/src/handlers/: handler.py
nft_service/src/models/: auditable.py  balance.py  exception.py  nft.py  transaction.py  user.py
nft_service/src/routers/: balance_router.py  nft_router.py  routers.py  transaction_router.py  user_router.py
nft_service/src/schemas/: balance_schema.py  base_schema.py  nft_schema.py  request_schema.py  transaction_schema.py  user_schema.py
nft_service/src/services/: balance_service.py  base_service.py  nft_service.py  transaction_service.py  user_service.py
tests/: conftest.py  utils.py
tests/integration/: test_buy.py
tests/unit/persistence/: test_nft_persistence.py
tests/unit/routers/: test_balance_router.py  test_nft_router.py  test_transaction_router.py  test_user_router.py
tests/unit/services/: test_balance_service.py  test_nft_service.py  test_user_service.py
